Added tulevik.EU and fixed an html error

--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
   <li><a href="https://darksquaregames.com/blog">Blog</a></li>
   <li><a href="https://itunes.apple.com/developer/id878126674">iTunes</a></li>
   <li><a href="https://twitter.com/darksquaregames">Twitter</a></li>
-  <li><a href="https://facebook.com/darksquaregames">Facebook<a/></li>
+  <li><a href="https://facebook.com/darksquaregames">Facebook</a></li>
+</ul>
+
+<h3>tulevik.EU</h3>
+<p>A small company ran by two brothers who develop both free and commercial narrative focused PC games.</p>
+<ul>
+  <li><a href="http://tulevik.eu">Website</a></li>
+  <li><a href="http://officemanagement101.com">Upcoming game Office Management 101</a></li>
+  <li><a href="https://twitter.com/tulevikEU">Twitter</a></li>
+  <li><a href="https://facebook.com/tulevikEU">Facebook</a></li>
 </ul>
 <!--Add your companies here! -->
 
