Updated the contact information

--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to indiegame.ee.</h3>
+      <h1>Welcome to indiegames.ee!</h1>
 
 <p>This site is a collection of all Estonian and Estonia-based indie game developers. Feel free to add your own teams!</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dark Square Games</h3>
+<h3>Dark Square Games</h3>
 
 <p>Dark Square Games develops minimalistic iOS apps and games.</p>
 <ul>
@@ -41,6 +39,9 @@
   <li><a href="https://twitter.com/tulevikEU">Twitter</a></li>
   <li><a href="https://facebook.com/tulevikEU">Facebook</a></li>
 </ul>
+
+<h3>Your team here?</h3>
+<p>If you want your team to be on this list, you can either just add it yourself through a pull request or simply email us with the info at <a href="mailto:contact@darksquaregames.com">contact@darksquaregames.com</a> </p>
 <!--Add your companies here! -->
 
       <footer class="site-footer">
