Added Fortress Occident

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
   <li><a href="https://facebook.com/tulevikEU">Facebook</a></li>
 </ul>
 
+<h3>Fortress Occident</h3>
+<p>A studio in Tallinn, Estonia. Working on a video game titled “No Truce With The Furies”. It’s an isometric role playing game with a heavy focus on narrative.</p>
+<ul>
+  <li><a href="http://devblog.fortressoccident.com/">Website</a></li>
+  <li><a href="https://www.facebook.com/fortressoccident">Facebook</a></li>
+  <li><a href="https://www.instagram.com/fortressoccident/">Instagram</a></li>
+</ul>
+
 <h3>Your team here?</h3>
 <p>If you want your team to be on this list, you can either just add it yourself through a pull request or simply email us with the info at <a href="mailto:contact@darksquaregames.com">contact@darksquaregames.com</a> </p>
 <!--Add your companies here! -->
