--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Indiegames.ee by rajarvin</title>
+    <title>Indiegames.ee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -46,6 +46,14 @@
   <li><a href="http://devblog.fortressoccident.com/">Website</a></li>
   <li><a href="https://www.facebook.com/fortressoccident">Facebook</a></li>
   <li><a href="https://www.instagram.com/fortressoccident/">Instagram</a></li>
+</ul>
+
+<h3>Veskisoft OÜ</h3>
+<p>A small company based in Elva, Estonia. Working mostly on websites but also games. Headed by <a target="_blank" href="https://twitter.com/EpiphanyG">Gavin Mills</a></p>
+<ul>
+  <li><a href="http://veskisoft.com/">Website</a></li>
+  <li><a href="http://turnstile-football.com">Turnstile Football</a> (free hotseat/online multiplayer football game)</li>
+  <li><a href="mailto:gavin@veskisoft.com">Email</a></li>
 </ul>
 
 <h3>Your team here?</h3>
