--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
   <li><a href="https://www.instagram.com/fortressoccident/">Instagram</a></li>
 </ul>
 
+<h3>PlayWin</h3>
+<p>
+The PlayWin platform consists of an SDK or API for developers and the PlayWin HQ app for gamers. Developers integrate directly into their existing product, giving gamers the opportunity to challenge their friends and win real money. Gamers use the PlayWin HQ app to easily finds PlayWin enabled games on their platform of choice.</p>
+<ul>
+  <li><a href="https://playwin.me/">Website</a></li>
+  <li><a href="https://playwin.me/blog">Blog</a></li>
+  <li><a href="https://twitter.com/PlayW1n">Twitter</a></li>
+  <li><a href="https://www.facebook.com/PlayWin.me/">Facebook</a></li>
+</ul>
+
 <h3>Veskisoft OÜ</h3>
 <p>A small company based in Elva, Estonia. Working mostly on websites but also games. Headed by <a target="_blank" href="https://twitter.com/EpiphanyG">Gavin Mills</a></p>
 <ul>
